<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:constraint="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    card_view:cardCornerRadius="13dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/min_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="30sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/details"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/min_info"
            card_view:layout_constraintTop_toBottomOf="@+id/min_info"
            constraint:layout_constraintTop_toBottomOf="@+id/min_info">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/cerro_verde"
                card_view:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/place_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                card_view:layout_constraintBottom_toTopOf="@+id/web_site_label"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/photo" />


            <TextView
                android:id="@+id/web_site_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/web_site"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/place_description" />

            <TextView
                android:id="@+id/place_web_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/url"
                card_view:layout_constraintStart_toEndOf="@+id/web_site_label"
                card_view:layout_constraintTop_toBottomOf="@+id/place_description" />

            <TextView
                android:id="@+id/phone_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/phone_number_label"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/place_web_site" />

            <TextView
                android:id="@+id/place_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/phone_number"
                card_view:layout_constraintBottom_toBottomOf="@+id/phone_number_label"
                card_view:layout_constraintStart_toEndOf="@+id/phone_number_label"
                card_view:layout_constraintTop_toTopOf="@+id/phone_number_label" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_label"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/phone_number_label" />

            <TextView
                android:id="@+id/place_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/category"
                card_view:layout_constraintBottom_toBottomOf="@+id/category_label"
                card_view:layout_constraintStart_toEndOf="@+id/category_label"
                card_view:layout_constraintTop_toTopOf="@+id/category_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>